# web-diary-rs

./: .gitignore  Cargo.toml  Taskfile.yaml  imprt.py
assets/: hotkeys.js  site.css
css/: site.css
editor/: new-entry.js  new-entry.ts  pnpm-lock.yaml  tsconfig.json
javascript/: Rhizfile  new-editor.ts  new-entry.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/: main.rs
templates/: base.html  entry.html  index.html  new.html  search.html  year.html
