[package]
name = "web-diary-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
askama = "0.12.0"
axum = "0.6.12"
chrono = "0.4.24"
log = "0.4.17"
pretty_env_logger = "0.4.0"
pulldown-cmark = "0.9.2"
rusqlite = { version = "0.28.0", features = ["chrono", "bundled"] }
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros"] }
tower-http = { version = "0.4.0", features = ["fs"], default-features = false }

