[package]
name = "web-diary-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3"
askama = "0.12"
axum = "0.6"
chrono = "0.4"
hex = "0.4.3"
log = "0.4.17"
num-traits = "0.2.15"
pretty_env_logger = "0.4.0"
pulldown-cmark = "0.9"
rusqlite = { version = "0.28", features = ["chrono", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.7"
tokio = { version = "1.26", features = ["macros"] }
tower-http = { version = "0.4", features = ["fs", "trace"], default-features = false }

